# mcp-python-sandbox

./: .docker_build_info  .gitignore  README.md  __init__.py  config.toml  main.py  pyproject.toml
.trae/rules/: project_rules.md
mcp_sandbox/: models.py
mcp_sandbox/api/: routes.py  sandbox_file.py
mcp_sandbox/core/: __init__.py  mcp_tools.py
mcp_sandbox/core/sandbox_modules/: __init__.py  sandbox_core.py  sandbox_execution.py  sandbox_file_ops.py  sandbox_package.py  sandbox_records.py
mcp_sandbox/utils/: config.py  exceptions.py  logging_config.py  task_manager.py
sandbox_images/: Dockerfile
