[project]
name = "mcp-sandbox"
version = "0.1.0"
description = "Safe sandboxes for llms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "docker>=7.1.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.3",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "ruff>=0.11.6",
    "tomli>=2.2.1",
    "typing-extensions>=4.15.0",
]

[project.scripts]
mcp-sandbox = "main:main"
